# speech-recognition

./: CMakeLists.txt  new.txt
include/: audio_functions.h  miniaudio.h
src/: audio_functions.c  main.cpp  miniaudio.c
